--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="./img/stylesheet.css">
 
-    <title>BAY TECH LIMITED-Privacy Policy&Contact</title>
+    <title>Quilphora-Privacy Policy&Contact</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
 
-            <h1 id="project_title">BAY TECH LIMITED</h1>
+            <h1 id="project_title">Quilphora</h1>
             <h2 id="project_tagline"></h2>
         </header>
     </div>
