--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
 
-            <h1 id="project_title">Quilphora</h1>
+            <h1 id="project_title">Quilphora&nbsp;&nbsp;&nbsp;&nbsp;<a href="tech.html" target="_blank">Technical Support Feedback</a></h1>
             <h2 id="project_tagline"></h2>
         </header>
     </div>
